# ipynb_refactor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: conversion.py  main.py  refactoring.py
app/static/js/: app.js
app/templates/: index.html
test/: test_app.py
