[tool.poetry]
name = "jupyter-refactoring"
version = "0.1.0"
description = "Jupyter Notebook refactoring application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
openai = "^0.27.0"
nbconvert = "^6.1.0"
nbformat = "^5.1.3"
markupsafe = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"